--- a/css/tabuleiro.css
+++ b/css/tabuleiro.css
@@ -1,78 +1,122 @@
-body{
+body {
     background-color: rgb(226, 223, 223);
     font-family: 'Montserrat', sans-serif;
 }
-.container{
+
+.container {
     width: 940px;
-    margin:0px auto; 
-    
+    margin: 0px auto;
+
 }
-.principal{
+
+.principal {
     position: absolute;
     width: 464px;
     height: 152px;
-    left:35%;
+    left: 35%;
     top: 400px;
-    border: black solid 2px;
-    
-    
     
 
+
+
+
 }
-.palavra{
+
+.palavra {
     width: 100%;
     height: 92px;
+
+
+}
+.letras{
+    text-align: center;
+}
+
+.input_palavra {
+    height: 50px;
+    width: 9.0%;
+    margin-left: 4px;
+    background: rgb(226, 223, 223);
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-color: #0A3871;
+    border-bottom: 3px solid;
+    text-align: center;
+    font-weight: bold;
+    font-size: 25px;
+    color: #0A3871;
     
     
 }
-.input_palavra{
-    height:50px ;
-    width: 40px;
-    margin-left: 32px;
-    margin-top: 4px;
-    background: rgb(226, 223, 223); ;
-}
-#canvas_palavra{
+
+#canvas_palavra {
     position: absolute;
     top: 70px;
     width: 100%;
     height: 20px;
 }
-.falhas{
+
+.falhas {
     width: 136px;
     height: 36px;
-    background-color: aqua;
     margin: 0px auto;
 }
-.input_falhas{
+
+.input_falhas {
     width: 15px;
     height: 15px;
-}
-.botoes{
-    position: relative;
-    top:604px ;
+    background:rgb(226, 225, 223) ;
+    border: none;
     text-align: center;
-    
+    font-weight: bold;
+    color: #0A3871;
 }
-.btn_novoj{
+
+.botoes {
+    position: relative;
+    top: 604px;
+    text-align: center;
+
+}
+a{
+    text-decoration: none;
+}
+
+.btn_novoj {
     background-color: rgb(59, 152, 245);
     height: 60px;
     width: 30%;
-    border: solid 3px rgb(139, 105, 234) ;
+    border: solid 3px rgb(139, 105, 234);
     border-radius: 18px;
     font-weight: bold;
     color: white;
     font-size: 18px;
 
 }
-.btn_desistir{
+
+.btn_desistir {
     background-color: rgb(59, 152, 245);
     height: 60px;
     width: 30%;
-    border: solid 3px rgb(139, 105, 234) ;
+    border: solid 3px rgb(139, 105, 234);
     border-radius: 18px;
     font-weight: bold;
     color: white;
     font-size: 18px;
 
+}
+
+@media screen and (max-width:480px) {
+    .container {
+        width: 100%
+    }
+    .principal{
+        left: 18px;
+        width: 90%;
+    }
+    .input_palavra{
+        margin: 8px;
+        width: 5%;
+    }
 }
