--- a/css/tabuleiro.css
+++ b/css/tabuleiro.css
@@ -128,6 +128,11 @@ a{
     .container {
         width: 100%
     }
+    .forca{
+        width: 100%;
+        position: absolute;
+        left: 0px;
+    }
     .principal{
         left: 18px;
         width: 90%;
